# korp-mono-rs

./: Cargo.toml  Readme.md
korp-mono-fill-gen/: Cargo.toml  Makefile  Readme.md
korp-mono-fill-gen/src/: main.rs
src/: main.rs  parse_year.rs  process_sentence.rs  status_message.rs
src/analysed/: file.rs  path.rs
src/korp_mono/: file.rs  mod.rs  path.rs
