[package]
name = "korp-mono-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.30", features = ["derive"] }
dedent = "0.1.1"
env_logger = "0.11.7"
giellacgparser = { git = "https://github.com/giellatekno/giellacgparser" }
itertools = "0.14.0"
ouroboros = "0.18.5"
quick-xml = { version = "0.37.2", features = ["serialize"] }
rayon = "1.10.0"
serde = { version = "1.0.218", features = ["derive"] }
tap = "1.0.1"
walkdir = "2.5.0"
gtcorpusutil = { git = "https://github.com/giellatekno/gtcorpusutil" }
indicatif = { version = "0.18.4", features = ["rayon", "improved_unicode"] }
tracing = "0.1.44"
tracing-indicatif = "0.3.14"
tracing-subscriber = "0.3.23"
