[package]
name = "korp-mono-fill-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
rayon = "1.10.0"
regex = "1.11.1"
walkdir = "2.5.0"
hfst = { path = "/home/anders/projects/hfst-rust/hfst" }
base64 = "0.22.1"
gtcorpusutil = { path = "/home/anders/projects/gtcorpusutil/" }
